--- a/CurlingScheduler/App.xaml
+++ b/CurlingScheduler/App.xaml
@@ -1,9 +1,9 @@
 ﻿<Application x:Class="CurlingScheduler.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CurlingScheduler"
+             xmlns:vm="clr-namespace:CurlingScheduler.ViewModel"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <vm:Locator x:Key="Locator" />
     </Application.Resources>
 </Application>
