--- a/CurlingScheduler.Ui/MainWindow.xaml
+++ b/CurlingScheduler.Ui/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="CurlingScheduler.MainWindow"
+﻿<Window x:Class="CurlingScheduler.Ui.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -55,6 +55,7 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
@@ -66,12 +67,16 @@
             <Label Grid.Row="1" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Draws" />
             <xctk:IntegerUpDown Grid.Row="1" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="{Binding DrawCountMinimum}" Value="{Binding DrawCount, Mode=TwoWay}" />
 
-            <Label Grid.Row="2" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Balanced or Squished Draws" />
-            <ComboBox Grid.Row="2" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ItemsSource="{Binding AvailableDrawAlignment}" SelectedValue="{Binding DrawAlignment, Mode=TwoWay}" />
+            <Label Grid.Row="2" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Weeks" />
+            <xctk:IntegerUpDown Grid.Row="2" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="1" Value="{Binding WeekCount, Mode=TwoWay}" />
 
-            <Button Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Padding="5" Content="Generate Schedule" Command="{Binding GenerateSchedule}" />
+            <Label Grid.Row="3" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Balanced or Squished Draws" />
+            <ComboBox Grid.Row="3" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ItemsSource="{Binding AvailableDrawAlignment}" SelectedValue="{Binding DrawAlignment, Mode=TwoWay}" />
+            
 
-            <Image Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" MaxWidth="150" HorizontalAlignment="Center" Source="{StaticResource logo}"/>
+            <Button Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Padding="5" Content="Generate Schedule" Command="{Binding GenerateSchedule}" />
+
+            <Image Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" MaxWidth="150" HorizontalAlignment="Center" Source="{StaticResource logo}"/>
 
             <Label Grid.Row="0" Grid.Column="2" Margin="5" HorizontalAlignment="Center" Content="Enter Teams Below, One Per Line." />
             <TextBox Grid.Row="1" Grid.RowSpan="100" Grid.Column="2" Margin="5" Padding="5" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding TeamsText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
