--- a/CurlingScheduler.Ui/MainWindow.xaml
+++ b/CurlingScheduler.Ui/MainWindow.xaml
@@ -56,6 +56,7 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
@@ -72,11 +73,15 @@
 
             <Label Grid.Row="3" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Balanced or Squished Draws" />
             <ComboBox Grid.Row="3" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ItemsSource="{Binding AvailableDrawAlignment}" SelectedValue="{Binding DrawAlignment, Mode=TwoWay}" />
-            
 
-            <Button Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Padding="5" Content="Generate Schedule" Command="{Binding GenerateSchedule}" />
+            <Label Grid.Row="4" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Balance Stones to Teams" />
+            <CheckBox Grid.Row="4" Grid.Column="1" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" IsChecked="{Binding BalanceStones, Mode=TwoWay}"/>
 
-            <Image Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" MaxWidth="150" HorizontalAlignment="Center" Source="{StaticResource logo}"/>
+
+
+            <Button Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Padding="5" Content="Generate Schedule" Command="{Binding GenerateSchedule}" />
+
+            <Image Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" MaxWidth="150" HorizontalAlignment="Center" Source="{StaticResource logo}"/>
 
             <Label Grid.Row="0" Grid.Column="2" Margin="5" HorizontalAlignment="Center" Content="Enter Teams Below, One Per Line." />
             <TextBox Grid.Row="1" Grid.RowSpan="100" Grid.Column="2" Margin="5" Padding="5" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding TeamsText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
