--- a/CurlingScheduler.Ui/MainWindow.xaml
+++ b/CurlingScheduler.Ui/MainWindow.xaml
@@ -57,34 +57,45 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
-            <Label Grid.Row="0" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Sheets" />
-            <xctk:IntegerUpDown Grid.Row="0" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="1" Value="{Binding SheetCount, Mode=TwoWay}" />
+            <Menu Grid.Row="0" Grid.ColumnSpan="3" Grid.Column="0">
+                <MenuItem Header="_File">
+                    <MenuItem Header="_Open Teams File" Command="{Binding OpenFile}"/>
+                    <MenuItem Header="_Save Teams" Command="{Binding SaveFile}"/>
+                    <MenuItem Header="_Save As" />
+                    <Separator />
+                    <MenuItem Header="_Exit" />
+                </MenuItem>
+            </Menu>
 
-            <Label Grid.Row="1" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Draws" />
-            <xctk:IntegerUpDown Grid.Row="1" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="{Binding DrawCountMinimum}" Value="{Binding DrawCount, Mode=TwoWay}" />
+            <Label Grid.Row="1" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Sheets" />
+            <xctk:IntegerUpDown Grid.Row="1" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="1" Value="{Binding SheetCount, Mode=TwoWay}" />
 
-            <Label Grid.Row="2" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Weeks" />
-            <xctk:IntegerUpDown Grid.Row="2" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="1" Value="{Binding WeekCount, Mode=TwoWay}" />
+            <Label Grid.Row="2" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Draws" />
+            <xctk:IntegerUpDown Grid.Row="2" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="{Binding DrawCountMinimum}" Value="{Binding DrawCount, Mode=TwoWay}" />
 
-            <Label Grid.Row="3" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Balanced or Squished Draws" />
-            <ComboBox Grid.Row="3" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ItemsSource="{Binding AvailableDrawAlignment}" SelectedValue="{Binding DrawAlignment, Mode=TwoWay}" />
+            <Label Grid.Row="3" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Weeks" />
+            <xctk:IntegerUpDown Grid.Row="3" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="1" Value="{Binding WeekCount, Mode=TwoWay}" />
 
-            <Label Grid.Row="4" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Balance Stones to Teams" />
-            <CheckBox Grid.Row="4" Grid.Column="1" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" IsChecked="{Binding BalanceStones, Mode=TwoWay}"/>
+            <Label Grid.Row="4" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Balanced or Squished Draws" />
+            <ComboBox Grid.Row="4" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ItemsSource="{Binding AvailableDrawAlignment}" SelectedValue="{Binding DrawAlignment, Mode=TwoWay}" />
+
+            <Label Grid.Row="5" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Balance Stones to Teams" />
+            <CheckBox Grid.Row="5" Grid.Column="1" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" IsChecked="{Binding BalanceStones, Mode=TwoWay}"/>
 
 
 
-            <Button Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Padding="5" Content="Generate Schedule" Command="{Binding GenerateSchedule}" />
+            <Button Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Padding="5" Content="Generate Schedule" Command="{Binding GenerateSchedule}" />
 
-            <Image Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" MaxWidth="150" HorizontalAlignment="Center" Source="{StaticResource logo}"/>
+            <Image Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" MaxWidth="150" HorizontalAlignment="Center" Source="{StaticResource logo}"/>
 
-            <Label Grid.Row="0" Grid.Column="2" Margin="5" HorizontalAlignment="Center" Content="Enter Teams Below, One Per Line." />
-            <TextBox Grid.Row="1" Grid.RowSpan="100" Grid.Column="2" Margin="5" Padding="5" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding TeamsText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <Label Grid.Row="1" Grid.Column="2" Margin="5" HorizontalAlignment="Center" Content="Enter teams below, one per line OR open a text file from the menu." />
+            <TextBox Grid.Row="2" Grid.RowSpan="100" Grid.Column="2" Margin="5" Padding="5" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding TeamsText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
         </Grid>
     </Border>
 </Window>
