--- a/CurlingScheduler.Ui/MainWindow.xaml
+++ b/CurlingScheduler.Ui/MainWindow.xaml
@@ -95,7 +95,7 @@
 
             <Image Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" MaxWidth="150" HorizontalAlignment="Center" Source="{StaticResource logo}"/>
 
-            <Label Grid.Row="1" Grid.Column="2" Margin="5" HorizontalAlignment="Center" Content="Enter Teams Below, One Per Line." />
+            <Label Grid.Row="1" Grid.Column="2" Margin="5" HorizontalAlignment="Center" Content="Enter Teams Below, One Per Line. Duplicate Teams Will be Ignored" />
             <TextBox Grid.Row="2" Grid.RowSpan="100" Grid.Column="2" Margin="5" Padding="5" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding TeamsText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
             <Label Grid.Row="1" Grid.Column="3" Margin="5" HorizontalAlignment="Center" Content="Schedule Output"/>
