--- a/CurlingScheduler.Ui/MainWindow.xaml
+++ b/CurlingScheduler.Ui/MainWindow.xaml
@@ -50,6 +50,7 @@
                 <ColumnDefinition Width="auto" />
                 <ColumnDefinition Width="auto" MinWidth="100" />
                 <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="2*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
@@ -94,8 +95,22 @@
 
             <Image Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" MaxWidth="150" HorizontalAlignment="Center" Source="{StaticResource logo}"/>
 
-            <Label Grid.Row="1" Grid.Column="2" Margin="5" HorizontalAlignment="Center" Content="Enter teams below, one per line OR open a text file from the menu." />
+            <Label Grid.Row="1" Grid.Column="2" Margin="5" HorizontalAlignment="Center" Content="Enter Teams Below, One Per Line. Duplicate Teams Will be Ignored" />
             <TextBox Grid.Row="2" Grid.RowSpan="100" Grid.Column="2" Margin="5" Padding="5" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding TeamsText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+
+            <Label Grid.Row="1" Grid.Column="3" Margin="5" HorizontalAlignment="Center" Content="Schedule Output"/>
+            <TabControl Grid.Row="2" Grid.RowSpan="100" Grid.Column="3" Margin="5" Padding="0">
+                <TabItem Header="_Game Schedule">
+                    <ScrollViewer Margin="5" Padding="0" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
+                        <TextBox Padding="5" TextWrapping="Wrap" IsReadOnly="true" Text="{Binding GameSchedule}"/>
+                    </ScrollViewer>
+                </TabItem>
+                <TabItem Header="_Stone Schedule">
+                    <ScrollViewer Margin="5" Padding="0" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
+                        <TextBox Padding="5" TextWrapping="Wrap" IsReadOnly="true" Text="{Binding StoneSchedule}"/>
+                    </ScrollViewer>
+                </TabItem>
+            </TabControl>
         </Grid>
     </Border>
 </Window>
