--- a/CurlingScheduler.Ui/MainWindow.xaml
+++ b/CurlingScheduler.Ui/MainWindow.xaml
@@ -16,13 +16,13 @@
             <Style TargetType="{x:Type TextBox}">
                 <Setter Property="Background" Value="#f2f2f2" />
             </Style>
-            <BitmapImage x:Key="logo" UriSource="Resources/logo.png"/>
+            <BitmapImage x:Key="logo" UriSource="Resources/logo.png" />
             <Style TargetType="{x:Type Button}">
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Button}">
                             <Border Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1" Margin="{TemplateBinding Margin}" Padding="{TemplateBinding Padding}">
-                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                             </Border>
                         </ControlTemplate>
                     </Setter.Value>
@@ -46,77 +46,78 @@
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Menu Grid.Row="0">
             <MenuItem Header="_File">
-                <MenuItem Header="_Load Configuration" Command="{Binding OpenFile}"/>
-                <MenuItem Header="_Save Configuration" Command="{Binding SaveFile}"/>
+                <MenuItem Header="_Load Configuration" Command="{Binding OpenFile}" />
+                <MenuItem Header="_Save Configuration" Command="{Binding SaveFile}" />
                 <MenuItem Header="Save Configuration _As" Command="{Binding SaveFileAs}" />
                 <Separator />
-                <MenuItem Header="_Exit" Command="{Binding ExitProgram}"/>
+                <MenuItem Header="_Exit" Command="{Binding ExitProgram}" />
             </MenuItem>
         </Menu>
-    <Border Grid.Row="1" Margin="10" Background="#0b1226" BorderBrush="#f2f2f2" BorderThickness="1">
-        <Grid Margin="5">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto" />
-                <ColumnDefinition Width="auto" MinWidth="100" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="2*" />
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="auto" />
-            </Grid.RowDefinitions>
+        <Border Grid.Row="1" Margin="10" Background="#0b1226" BorderBrush="#f2f2f2" BorderThickness="1">
+            <Grid Margin="5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" MinWidth="100" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="2*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
 
+                <Label Grid.Row="1" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Sheets" />
+                <xctk:IntegerUpDown Grid.Row="1" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="1" Value="{Binding SheetCount, Mode=TwoWay}" />
+                
+                <Label Grid.Row="2" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Stone Sets" />
+                <xctk:IntegerUpDown Grid.Row="2" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="1" Maximum="{Binding SheetCount}" Value="{Binding StoneCount, Mode=TwoWay}" />
 
-            <Label Grid.Row="1" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Sheets" />
-            <xctk:IntegerUpDown Grid.Row="1" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="1" Value="{Binding SheetCount, Mode=TwoWay}" />
+                <Label Grid.Row="3" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Draws" />
+                <xctk:IntegerUpDown Grid.Row="3" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="{Binding DrawCountMinimum}" Value="{Binding DrawCount, Mode=TwoWay}" />
 
-            <Label Grid.Row="2" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Draws" />
-            <xctk:IntegerUpDown Grid.Row="2" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="{Binding DrawCountMinimum}" Value="{Binding DrawCount, Mode=TwoWay}" />
+                <Label Grid.Row="4" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Weeks" />
+                <xctk:IntegerUpDown Grid.Row="4" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="1" Value="{Binding WeekCount, Mode=TwoWay}" />
 
-            <Label Grid.Row="3" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Number of Weeks" />
-            <xctk:IntegerUpDown Grid.Row="3" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FormatString="N0" Increment="1" Minimum="1" Value="{Binding WeekCount, Mode=TwoWay}" />
+                <Label Grid.Row="5" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Balanced or Squished Draws" />
+                <ComboBox Grid.Row="5" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ItemsSource="{Binding AvailableDrawAlignment}" SelectedValue="{Binding DrawAlignment, Mode=TwoWay}" />
 
-            <Label Grid.Row="4" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Balanced or Squished Draws" />
-            <ComboBox Grid.Row="4" Grid.Column="1" Margin="5" Padding="5" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" ItemsSource="{Binding AvailableDrawAlignment}" SelectedValue="{Binding DrawAlignment, Mode=TwoWay}" />
+                <Label Grid.Row="6" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Balance Stones to Teams" />
+                <CheckBox Grid.Row="6" Grid.Column="1" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" IsChecked="{Binding BalanceStones, Mode=TwoWay}" />
 
-            <Label Grid.Row="5" Grid.Column="0" Margin="5" HorizontalAlignment="Left" Content="Balance Stones to Teams" />
-            <CheckBox Grid.Row="5" Grid.Column="1" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center" IsChecked="{Binding BalanceStones, Mode=TwoWay}"/>
+                <Button Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Padding="5" Content="Generate Schedule" Command="{Binding GenerateSchedule}" />
 
+                <Image Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" MaxWidth="150" HorizontalAlignment="Center" Source="{StaticResource logo}" />
 
+                <Label Grid.Row="1" Grid.Column="2" Margin="5" HorizontalAlignment="Center" Content="Enter Teams Below, One Per Line. Duplicate Teams Will be Ignored" />
+                <TextBox Grid.Row="2" Grid.RowSpan="100" Grid.Column="2" Margin="5" Padding="5" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding TeamsText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
-            <Button Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" Padding="5" Content="Generate Schedule" Command="{Binding GenerateSchedule}" />
-
-            <Image Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="2" Margin="5" MaxWidth="150" HorizontalAlignment="Center" Source="{StaticResource logo}"/>
-
-            <Label Grid.Row="1" Grid.Column="2" Margin="5" HorizontalAlignment="Center" Content="Enter Teams Below, One Per Line. Duplicate Teams Will be Ignored" />
-            <TextBox Grid.Row="2" Grid.RowSpan="100" Grid.Column="2" Margin="5" Padding="5" TextWrapping="Wrap" AcceptsReturn="True" Text="{Binding TeamsText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-
-            <Label Grid.Row="1" Grid.Column="3" Margin="5" HorizontalAlignment="Center" Content="Schedule Output"/>
-            <TabControl Grid.Row="2" Grid.RowSpan="100" Grid.Column="3" Margin="5" Padding="0">
-                <TabItem Header="_Game Schedule">
-                    <ScrollViewer Margin="5" Padding="0" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
-                        <TextBox Padding="5" TextWrapping="Wrap" IsReadOnly="true" Text="{Binding GameSchedule}"/>
-                    </ScrollViewer>
-                </TabItem>
-                <TabItem Header="_Stone Schedule">
-                    <ScrollViewer Margin="5" Padding="0" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
-                        <TextBox Padding="5" TextWrapping="Wrap" IsReadOnly="true" Text="{Binding StoneSchedule}"/>
-                    </ScrollViewer>
-                </TabItem>
-            </TabControl>
-        </Grid>
+                <Label Grid.Row="1" Grid.Column="3" Margin="5" HorizontalAlignment="Center" Content="Schedule Output" />
+                <TabControl Grid.Row="2" Grid.RowSpan="100" Grid.Column="3" Margin="5" Padding="0">
+                    <TabItem Header="_Game Schedule">
+                        <ScrollViewer Margin="5" Padding="0" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
+                            <TextBox Padding="5" TextWrapping="Wrap" IsReadOnly="true" Text="{Binding GameSchedule}" />
+                        </ScrollViewer>
+                    </TabItem>
+                    <TabItem Header="_Stone Schedule">
+                        <ScrollViewer Margin="5" Padding="0" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto">
+                            <TextBox Padding="5" TextWrapping="Wrap" IsReadOnly="true" Text="{Binding StoneSchedule}" />
+                        </ScrollViewer>
+                    </TabItem>
+                </TabControl>
+            </Grid>
         </Border>
     </Grid>
 </Window>
